Essai correction contraste de la page contact

--- a/style.css
+++ b/style.css
@@ -369,6 +369,11 @@ a {
     color: #575757!important;
 }
 
+.inline-block {
+    display: inline-block;
+    margin: auto;
+}
+
 #presentation h1 {
     margin-top: 0;
 }
@@ -376,12 +381,14 @@ a {
 #presentation p {
     margin-bottom: 0;
     font-size: 1.4rem;
+}
+
+#presentation p, #feedback p {
     letter-spacing: 0.03rem;
 }
 
 #feedback p {
     font-size: 1.4rem;
-    letter-spacing: 0.03rem;
 }
 
 #feedback p:last-child{
@@ -540,10 +547,15 @@ h1 {
 }
 
 .address {
-    height: 415.2px;
+    width: auto;
+    margin-left: 30px;
 }
 
 .address h2, .address p {
+    color: white!important;
+}
+
+label {
     color: white!important;
 }
 
